remove hospital id from swagger
