# src/config/swagger.json
@@ -487,7 +487,6 @@
       "type": "object",
 
       "required": [
-        "hospital_id",
         "firstName",
         "age",
         "gender",
@@ -499,12 +498,6 @@
       ],
 
       "properties": {
-        "hospital_id": {
-          "type": "string",
-          "description": "MongoDB ObjectId of hospital",
-          "example": "68b1d92f65d84c8fbf89abcd"
-        },
-
         "patient_id": {
           "type": "string",
           "description": "Patient ID",
@@ -607,7 +600,6 @@
       },
 
       "example": {
-        "hospital_id": "68b1d92f65d84c8fbf89abcd",
         "patient_id": "PAT000001",
         "name_titles": "Mr",
         "firstName": "John",
@@ -635,11 +627,6 @@
         "_id": {
           "type": "string",
           "example": "68b1d92f65d84c8fbf89abce"
-        },
-
-        "hospital_id": {
-          "type": "string",
-          "example": "68b1d92f65d84c8fbf89abcd"
         },
 
         "patient_id": {
